--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yunfeng</groupId>
-    <artifactId>sabci</artifactId>
+    <artifactId>dummy</artifactId>
     <version>1.0</version>
 <!--        <packaging>jar</packaging>
     -->
@@ -93,4 +93,5 @@
             <version>0.12.0.2</version>
         </dependency>
     </dependencies>
+    <name>dummy</name>
 </project>
